--- a/libs/pages/src/login/login.component.html
+++ b/libs/pages/src/login/login.component.html
@@ -58,6 +58,7 @@
                 <button
                   type="submit"
                   class="form-control btn btn-primary rounded submit px-3"
+                  (click)="login()"
                 >
                   เข้าสู่ระบบ
                 </button>
