entrance and exit

--- a/libs/pages/src/login/login.component.html
+++ b/libs/pages/src/login/login.component.html
@@ -67,9 +67,19 @@
                 <button
                   type="submit"
                   class="form-control btn btn-primary rounded submit px-3"
-                  (click)="goToGate()"
+                  (click)="entrance()"
                 >
-                  PMS Gate
+                  Gate Entrance
+                </button>
+              </div>
+
+              <div class="form-group">
+                <button
+                  type="submit"
+                  class="form-control btn btn-primary rounded submit px-3"
+                  (click)="exit()"
+                >
+                  Gate Exit
                 </button>
               </div>
               <!--               <div class="form-group d-md-flex">
