--- a/libs/pages/src/monitor/monitor.component.html
+++ b/libs/pages/src/monitor/monitor.component.html
@@ -6,7 +6,7 @@
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-100">
     <!-- Position Column -->
     <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <th mat-header-cell *matHeaderCellDef>หมายเลข ticket</th>
       <td mat-cell *matCellDef="let element">{{ element.position }}</td>
     </ng-container>
 
