behavior subject service

--- a/libs/pages/src/exit/exit.component.html
+++ b/libs/pages/src/exit/exit.component.html
@@ -8,7 +8,7 @@
       type="button"
       class="btn btn-lg btn-danger"
       style="height: 6rem"
-      (click)="addNewVehicle()"
+      (click)="removeVehicle()"
     >
       <i class="bi bi-truck me-2 fs-1"></i>
       <div>Vehicle Left</div>
