fix entrance style

--- a/libs/pages/src/exit/exit.component.html
+++ b/libs/pages/src/exit/exit.component.html
@@ -1,13 +1,18 @@
 <div class="container-fluid bg-danger bg-opacity-25" style="height: 100vh">
+  <div class="d-flex justify-content-end">
+    <button class="btn btn-secondary mt-2" (click)="logout()">
+      ออกจากระบบ
+    </button>
+  </div>
   <div
-    class="d-flex flex-column justify-content-center align-items-center h-100"
+    class="mt-5 d-flex flex-column justify-content-center align-items-center"
   >
     <p class="fs-2">จำลองเหตุการณ์</p>
     <p class="fs-2">เมื่อรถออกจากลานจอด</p>
     <button
       type="button"
-      class="btn btn-lg btn-danger"
-      style="height: 6rem"
+      class="btn btn-lg btn-danger mt-5"
+      style="height: 6rem; width: 15rem"
       (click)="removeVehicle()"
     >
       <i class="bi bi-truck me-2 fs-1"></i>
