--- a/libs/pages/src/entrance/entrance.component.html
+++ b/libs/pages/src/entrance/entrance.component.html
@@ -1,13 +1,18 @@
 <div class="container-fluid bg-primary bg-opacity-25" style="height: 100vh">
+  <div class="d-flex justify-content-end">
+    <button class="btn btn-secondary mt-2" (click)="logout()">
+      ออกจากระบบ
+    </button>
+  </div>
   <div
-    class="d-flex flex-column justify-content-center align-items-center h-100"
+    class="mt-5 d-flex flex-column justify-content-center align-items-center"
   >
     <p class="fs-2 text-primary">จำลองเหตุการณ์</p>
     <p class="fs-2 text-primary">เมื่อรถเข้าสู่ลานจอด</p>
     <button
       type="button"
-      class="btn btn-lg btn-primary"
-      style="height: 6rem"
+      class="btn btn-lg btn-primary mt-5"
+      style="height: 6rem; width: 15rem"
       (click)="addNewVehicle()"
     >
       <i class="bi bi-truck me-2 fs-1"></i>
