--- a/libs/pages/src/monitor/monitor.component.html
+++ b/libs/pages/src/monitor/monitor.component.html
@@ -1,7 +1,5 @@
-<div class="p-5">
-  <div role="button" class="d-flex justify-content-end mb-2" (click)="logout()">
-    ออกจากระบบ
-  </div>
+<div class="p-5 d-flex flex-column align-items-end">
+  <button class="btn btn-danger mb-2" (click)="logout()">ออกจากระบบ</button>
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-100">
     <!-- Position Column -->
