--- a/libs/dialog/src/billing/billing.component.html
+++ b/libs/dialog/src/billing/billing.component.html
@@ -56,7 +56,7 @@
   </div>
 
   <div class="d-flex justify-content-center mt-3">
-    <button class="btn btn-sm btn-success">ตกลง</button>
-    <button class="btn btn-sm btn-secondary ms-2">ยกเลิก</button>
+    <button matDialogClose class="btn btn-sm btn-success">ตกลง</button>
+    <button matDialogClose class="btn btn-sm btn-secondary ms-2">ยกเลิก</button>
   </div>
 </form>
