--- a/libs/pages/src/entrance/entrance.component.html
+++ b/libs/pages/src/entrance/entrance.component.html
@@ -12,11 +12,11 @@
     <button
       type="button"
       class="btn btn-lg btn-primary mt-5"
-      style="height: 6rem; width: 15rem"
+      style="height: 8rem; width: 15rem"
       (click)="addNewVehicle()"
     >
       <i class="bi bi-truck me-2 fs-1"></i>
-      <div>Add new Vehicle</div>
+      <div>Vehicle Entered</div>
     </button>
   </div>
 </div>
