add vehicle info

--- a/libs/dialog/src/billing/billing.component.html
+++ b/libs/dialog/src/billing/billing.component.html
@@ -1,57 +1,37 @@
 <form>
   <div class="row mb-2 g-3 align-items-center">
     <div class="col-4">
-      <label for="inputPassword6" class="col-form-label">ทะเบียนรถ</label>
+      <label class="col-form-label">ทะเบียนรถ</label>
     </div>
     <div class="col-8">
-      <input
-        type="password"
-        id="inputPassword6"
-        class="form-control"
-        aria-describedby="passwordHelpInline"
-      />
+      <input type="password" class="form-control" />
     </div>
   </div>
 
   <div class="row mb-2 g-3 align-items-center">
     <div class="col-4">
-      <label for="inputPassword6" class="col-form-label">รวมเวลาจอด</label>
+      <label class="col-form-label">รวมเวลาจอด</label>
     </div>
     <div class="col-8">
-      <input
-        type="password"
-        id="inputPassword6"
-        class="form-control"
-        aria-describedby="passwordHelpInline"
-      />
+      <input type="password" class="form-control" />
     </div>
   </div>
 
   <div class="row mb-2 g-3 align-items-center">
     <div class="col-4">
-      <label for="inputPassword6" class="col-form-label">ยอดชำระ</label>
+      <label class="col-form-label">ยอดชำระ</label>
     </div>
     <div class="col-8">
-      <input
-        type="password"
-        id="inputPassword6"
-        class="form-control"
-        aria-describedby="passwordHelpInline"
-      />
+      <input type="password" class="form-control" />
     </div>
   </div>
 
   <div class="row mb-2 g-3 align-items-center">
     <div class="col-4">
-      <label for="inputPassword6" class="col-form-label">เงินทอน</label>
+      <label class="col-form-label">เงินทอน</label>
     </div>
     <div class="col-8">
-      <input
-        type="password"
-        id="inputPassword6"
-        class="form-control"
-        aria-describedby="passwordHelpInline"
-      />
+      <input type="password" class="form-control" />
     </div>
   </div>
 
