display incoming car

--- a/libs/form/src/vehicle-info/vehicle-info.component.html
+++ b/libs/form/src/vehicle-info/vehicle-info.component.html
@@ -1,4 +1,39 @@
-<form>
+<div class="fs-4 fw-bold text-center mb-2">ชื่อโครงการ</div>
+
+<div class="bg-secondary bg-opacity-50 bg-gradient p-2 my-2 mx-5">
+  <div>ใส่เลขทะเบียน</div>
+  <div
+    class="fs-3 fw-bold bg-white d-flex align-items-center justify-content-center"
+    style="height: 4rem"
+  >
+    <span>9 กค 2456</span>
+  </div>
+</div>
+
+<div class="row mb-2 g-3 align-items-center">
+  <div class="col-4">
+    <label class="col-form-label">ประเภท</label>
+  </div>
+  <div class="col-8">
+    <input disabled value="รถยนต์" type="text" class="form-control text-end" />
+  </div>
+</div>
+
+<div class="row mb-2 g-3 align-items-center">
+  <div class="col-4">
+    <label class="col-form-label">วัน-เวลาเข้า</label>
+  </div>
+  <div class="col-8">
+    <input
+      disabled
+      value="06/05/2022 11:21"
+      type="text"
+      class="form-control text-end"
+    />
+  </div>
+</div>
+
+<div class="bg-secondary bg-opacity-75 container mt-4 py-2">
   <div class="row mb-2 g-3 align-items-center">
     <div class="col-4">
       <label class="col-form-label">หมายเลขบัตร</label>
@@ -60,4 +95,4 @@
       />
     </div>
   </div>
-</form>
+</div>
